Fixed Location image not scaling on mobile.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -97,9 +97,8 @@ main {
   padding: 1em;
   width: 5em;
 }
-.locations{
-  margin:auto;
-  justify-content: center;
+.locations img{
+  width: 90%;
 }
 .menutitles {
   font-size: 0.894em;
